[tool.poetry]
name = "misinformation-prediction"
version = "0.1.0"
description = "Create a model to detect a misinformation"
authors = ["penscola <penscolashackletonfelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
