[tool.poetry]
name = "misinformation-prediction"
version = "0.1.0"
description = "Create a model to detect a misinformation"
authors = ["penscola <penscolashackletonfelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
transformers = {extras = ["torch"], version = "^4.45.1"}
wordcloud = "^1.9.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
accelerate = "^0.34.2"
datasets = "^3.0.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
